0.0304  2015-08-02      Piotr Roszatycki <dexter@cpan.org>

* Bugfix for 08chunked_req.t: should not use external files.

0.0303  2014-11-16      Piotr Roszatycki <dexter@cpan.org>

* Workaround for HTTP::Tiny + Test::TCP conflict, which prevented installing
  this package.

0.0302  2014-06-28      Piotr Roszatycki <dexter@cpan.org>

* Support for "quiet" option.
* Does not hang up on daemonize without error log file.
* Bugfix for streaming mode (Use of uninitialized value).

0.0301  2014-05-03      Piotr Roszatycki <dexter@cpan.org>

* Requirement for Time::HiRes is optional.

0.0300  2014-02-07      Piotr Roszatycki <dexter@cpan.org>

* Support for "user", "group" and "umask" options.

0.0200  2014-01-30      Piotr Roszatycki <dexter@cpan.org>

* Support for "daemonize", "pid" and "error-log" options.

0.0100  2014-01-25      Piotr Roszatycki <dexter@cpan.org>

* Initial CPAN release.
